force-app/main/default/objects/ItemContrato__c/ItemContrato__c.object-meta.xml
<CustomObject>
    <description>Relaciona aeronave a um contrato</description>
    <label>Item do Contrato</label>
    <nameField>
        <displayFormat>IC-{0000}</displayFormat>
        <label>Número do Item do Contrato</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itens do Contrato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>