force-app/main/default/objects/ItemContrato__c/fields/Aeronave__c.field-meta.xml
<CustomField>
    <fullName>Aeronave__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aeronave ao qual o item se relaciona</description>
    <inlineHelpText>Aeronave ao qual o item se relaciona</inlineHelpText>
    <label>Aeronave</label>
    <referenceTo>Aeronave__c</referenceTo>
    <relationshipLabel>Itens do Contrato</relationshipLabel>
    <relationshipName>ItensContrato</relationshipName>
    <type>Lookup</type>
</CustomField>