force-app/main/default/objects/ItemContrato__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Define se o item se encontra ativo</description>
    <inlineHelpText>Define se o item se encontra ativo</inlineHelpText>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>