force-app/main/default/objects/ItemContrato__c/fields/CompartilhadoContrato__c.field-meta.xml
<CustomField>
    <fullName>CompartilhadoContrato__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica aeronave pode ser compartilhada em outros contratos</description>
    <inlineHelpText>Indica aeronave pode ser compartilhada em outros contratos</inlineHelpText>
    <label>Compartilhado contrato</label>
    <type>Checkbox</type>
</CustomField>