force-app/main/default/objects/ItemContrato__c/fields/CompartilhadoSpot__c.field-meta.xml
<CustomField>
    <fullName>CompartilhadoSpot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o prefixo pode ser compartilhado com voos spot</description>
    <inlineHelpText>Indica se o prefixo pode ser compartilhado com voos spot</inlineHelpText>
    <label>Compartilhado spot</label>
    <type>Checkbox</type>
</CustomField>