force-app/main/default/objects/ItemContrato__c/fields/ConsumoHoraSolo__c.field-meta.xml
<CustomField>
    <fullName>ConsumoHoraSolo__c</fullName>
    <label>Consumo Hora solo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>