force-app/main/default/objects/ItemContrato__c/fields/ConsumoHoraVoo__c.field-meta.xml
<CustomField>
    <fullName>ConsumoHoraVoo__c</fullName>
    <label>Consumo/Hora (Voo)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>