force-app/main/default/objects/ItemContrato__c/fields/ContaContrato__c.field-meta.xml
<CustomField>
    <fullName>ContaContrato__c</fullName>
    <description>Id da conta do contrato</description>
    <formula>Contrato__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Id da conta do contrato</inlineHelpText>
    <label>Conta do contrato</label>
    <type>Text</type>
</CustomField>