force-app/main/default/objects/ItemContrato__c/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <description>Contrato ao qual o item se relaciona</description>
    <inlineHelpText>Contrato ao qual o item se relaciona</inlineHelpText>
    <label>Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Itens do Contrato</relationshipLabel>
    <relationshipName>ItensContrato</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>