force-app/main/default/objects/ItemContrato__c/fields/Data_Execu_o_TCAS_II__c.field-meta.xml
<CustomField>
    <fullName>Data_Execu_o_TCAS_II__c</fullName>
    <label>Data Execução TCAS II</label>
    <type>Date</type>
</CustomField>