force-app/main/default/objects/ItemContrato__c/fields/DataInicioContrato__c.field-meta.xml
<CustomField>
    <fullName>DataInicioContrato__c</fullName>
    <description>Data de início do contrato</description>
    <formula>Contrato__r.StartDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Data de início do contrato</inlineHelpText>
    <label>Data de início do contrato</label>
    <type>Date</type>
</CustomField>