force-app/main/default/objects/ItemContrato__c/fields/DataTermino__c.field-meta.xml
<CustomField>
    <fullName>DataTermino__c</fullName>
    <label>Data de término</label>
    <type>Date</type>
</CustomField>