force-app/main/default/objects/ItemContrato__c/fields/DataTerminoContrato__c.field-meta.xml
<CustomField>
    <fullName>DataTerminoContrato__c</fullName>
    <formula>Contrato__r.EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de término do contrato</label>
    <type>Date</type>
</CustomField>