force-app/main/default/objects/ItemContrato__c/fields/Dias_Waiver_Contratual__c.field-meta.xml
<CustomField>
    <fullName>Dias_Waiver_Contratual__c</fullName>
    <label>Dias Waiver Contratual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>