force-app/main/default/objects/ItemContrato__c/fields/ExclusivoMEDVAC__c.field-meta.xml
<CustomField>
    <fullName>ExclusivoMEDVAC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A aeronave será exibida apenas quando voo MEDVAC for solicitado</description>
    <inlineHelpText>A aeronave será exibida apenas quando voo MEDVAC for solicitado</inlineHelpText>
    <label>Exclusivo MEDVAC</label>
    <type>Checkbox</type>
</CustomField>