force-app/main/default/objects/ItemContrato__c/fields/HoraCorte__c.field-meta.xml
<CustomField>
    <fullName>HoraCorte__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Percentual da hora de voo que será cobrado no corte</description>
    <inlineHelpText>Percentual da hora de voo que será cobrado no corte</inlineHelpText>
    <label>Hora corte</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>