force-app/main/default/objects/ItemContrato__c/fields/IdExternoExclusivoSigtrip__c.field-meta.xml
<CustomField>
    <fullName>IdExternoExclusivoSigtrip__c</fullName>
    <externalId>true</externalId>
    <label>Id Externo Exclusivo Sigtrip</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>