force-app/main/default/objects/ItemContrato__c/fields/IdExternoSigtrip__c.field-meta.xml
<CustomField>
    <fullName>IdExternoSigtrip__c</fullName>
    <description>Id do contrato no Sigtrip</description>
    <externalId>true</externalId>
    <inlineHelpText>Id do contrato no Sigtrip</inlineHelpText>
    <label>Id externo Sigtrip</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>