force-app/main/default/objects/ItemContrato__c/fields/InvoiceSequence__c.field-meta.xml
<CustomField>
    <fullName>InvoiceSequence__c</fullName>
    <label>Invoice Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>