force-app/main/default/objects/ItemContrato__c/fields/MEDVAC__c.field-meta.xml
<CustomField>
    <fullName>MEDVAC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se há cobertura MEDVAC com a aeronave</description>
    <inlineHelpText>Indica se há cobertura MEDVAC com a aeronave</inlineHelpText>
    <label>MEDVAC</label>
    <type>Checkbox</type>
</CustomField>