force-app/main/default/objects/ItemContrato__c/fields/NomeConta__c.field-meta.xml
<CustomField>
    <fullName>NomeConta__c</fullName>
    <description>Nome da conta contratante</description>
    <formula>Contrato__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Nome da conta contratante</inlineHelpText>
    <label>Nome da conta</label>
    <type>Text</type>
</CustomField>