force-app/main/default/objects/ItemContrato__c/fields/NumeroContrato__c.field-meta.xml
<CustomField>
    <fullName>NumeroContrato__c</fullName>
    <description>Número do contrato</description>
    <formula>Contrato__r.NumeroContrato__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Número do contrato</inlineHelpText>
    <label>Número do contrato</label>
    <type>Text</type>
</CustomField>