force-app/main/default/objects/ItemContrato__c/fields/RealizaVoosSpot__c.field-meta.xml
<CustomField>
    <fullName>RealizaVoosSpot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Voos serão reservados sem vínculo ao contrato</description>
    <inlineHelpText>Voos serão reservados sem vínculo ao contrato</inlineHelpText>
    <label>Realiza voos spot</label>
    <type>Checkbox</type>
</CustomField>