force-app/main/default/objects/ItemContrato__c/fields/TCAS_II_Instalado__c.field-meta.xml
<CustomField>
    <fullName>TCAS_II_Instalado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TCAS II Instalado</label>
    <type>Checkbox</type>
</CustomField>