force-app/main/default/objects/ItemContrato__c/fields/TempoAjustePadrao__c.field-meta.xml
<CustomField>
    <fullName>TempoAjustePadrao__c</fullName>
    <label>Tempo de ajuste padrao</label>
    <type>Time</type>
</CustomField>