force-app/main/default/objects/ItemContrato__c/fields/TempoReservaPadrao__c.field-meta.xml
<CustomField>
    <fullName>TempoReservaPadrao__c</fullName>
    <label>Tempo de reserva padrao</label>
    <type>Time</type>
</CustomField>