force-app/main/default/objects/ItemContrato__c/fields/TempoSoloOffshore__c.field-meta.xml
<CustomField>
    <fullName>TempoSoloOffshore__c</fullName>
    <label>Tempo de solo offshore</label>
    <type>Time</type>
</CustomField>