force-app/main/default/objects/ItemContrato__c/fields/TempoSoloOnshore__c.field-meta.xml
<CustomField>
    <fullName>TempoSoloOnshore__c</fullName>
    <label>Tempo de solo onshore</label>
    <type>Time</type>
</CustomField>