force-app/main/default/objects/ItemContrato__c/fields/Tipo_de_Aeronave__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Aeronave__c</fullName>
    <label>Tipo de Aeronave</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_de_aeronave</valueSetName>
    </valueSet>
</CustomField>