force-app/main/default/objects/ItemContrato__c/fields/Unidade__c.field-meta.xml
<CustomField>
    <fullName>Unidade__c</fullName>
    <label>Unidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>DAY</fullName>
            </value>
            <value>
                <fullName>MONTH</fullName>
            </value>
            <value>
                <fullName>YEAR</fullName>
            </value>
            <value>
                <fullName>QTY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>