force-app/main/default/objects/ItemContrato__c/fields/ValorHora__c.field-meta.xml
<CustomField>
    <fullName>ValorHora__c</fullName>
    <description>Valor hora da aeronave no contrato em dólar para ser exibido na tela de criação de voo</description>
    <inlineHelpText>Valor hora da aeronave no contrato em dólar para ser exibido na tela de criação de voo</inlineHelpText>
    <label>Valor Hora para Exibição(USD)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>