force-app/main/default/objects/ItemContrato__c/fields/VariaDisponibilidade__c.field-meta.xml
<CustomField>
    <fullName>VariaDisponibilidade__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Um produto que tem seu valor cobrado na medição variando de acordo com a disponibilidade</description>
    <inlineHelpText>Um produto que tem seu valor cobrado na medição variando de acordo com a disponibilidade</inlineHelpText>
    <label>Varia com disponibilidade</label>
    <type>Checkbox</type>
</CustomField>