force-app/main/default/objects/ItemContrato__c/fields/VelocidadeCruzeiro__c.field-meta.xml
<CustomField>
    <fullName>VelocidadeCruzeiro__c</fullName>
    <label>Velocidade de cruzeiro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>