force-app/main/default/objects/ItemContrato__c/fields/Vencimento_TCAS_II__c.field-meta.xml
<CustomField>
    <fullName>Vencimento_TCAS_II__c</fullName>
    <formula>DataInicioContrato__c + 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vencimento TCAS II</label>
    <type>Date</type>
</CustomField>