force-app/main/default/objects/ItemContrato__c/recordTypes/Aeronave.recordType-meta.xml
<RecordType>
    <fullName>Aeronave</fullName>
    <active>true</active>
    <description>Aeronave vinculada ao contrato</description>
    <label>Aeronave</label>
</RecordType>