force-app/main/default/objects/ItemContrato__c/recordTypes/FMT.recordType-meta.xml
<RecordType>
    <fullName>FMT</fullName>
    <active>true</active>
    <label>FMT</label>
</RecordType>