force-app/main/default/objects/ItemContrato__c/recordTypes/Produto.recordType-meta.xml
<RecordType>
    <fullName>Produto</fullName>
    <active>true</active>
    <description>Produto vinculado ao contrato</description>
    <label>Produto</label>
</RecordType>