force-app/main/default/objects/ItemContrato__c/validationRules/ItemExclusivoMEDVAC.validationRule-meta.xml
<ValidationRule>
    <fullName>ItemExclusivoMEDVAC</fullName>
    <active>true</active>
    <description>Valida que para ser exclusivo MEDVAC o item deve possuir MEDVAC marcado</description>
    <errorConditionFormula>AND(
    ExclusivoMEDVAC__c,
				NOT(MEDVAC__c)
)</errorConditionFormula>
    <errorDisplayField>ExclusivoMEDVAC__c</errorDisplayField>
    <errorMessage>Para ser exclusivo o item deve contemplar MEDVAC</errorMessage>
</ValidationRule>