force-app/main/default/objects/ItemContrato__c/validationRules/ItemMEDVAC.validationRule-meta.xml
<ValidationRule>
    <fullName>ItemMEDVAC</fullName>
    <active>true</active>
    <description>Valida que caso o item possua MEDVAC o contrato deve estar marcado como MEDVAC</description>
    <errorConditionFormula>AND(
     NOT(Contrato__r.PossuiMEDVAC__c),
				 MEDVAC__c 
)</errorConditionFormula>
    <errorDisplayField>MEDVAC__c</errorDisplayField>
    <errorMessage>O contrato não possui MEDVAC</errorMessage>
</ValidationRule>