force-app/main/default/objects/ItemContrato__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NomeConta__c</columns>
    <columns>Contrato__c</columns>
    <columns>Tipo_de_Aeronave__c</columns>
    <columns>Aeronave__c</columns>
    <columns>IdExternoSigtrip__c</columns>
    <columns>Ativo__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>